app-ruby/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-on-rails-app
spec:
  selector:
    app: ruby-on-rails-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: ruby-on-rails-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: react-slb
  namespace: default
  labels:
    app: react-app
  annotations:
    kubernetes.io/elb.class: performance
    kubernetes.io/elb.health-check-flag: 'on'
    kubernetes.io/elb.health-check-option: '{"protocol":"TCP","delay":"5","timeout":"10","max_retries":"3"}'
    kubernetes.io/elb.id: 3c5c638d-7805-456a-a27e-7867b678afc7  # Replace with your existing ELB ID
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - name: cce-service-0
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32027
  loadBalancerIP: 193.95.30.205  
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
